--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -1,2 +1,42 @@
-<!--pages/user/user.wxml-->
-<text>pages/user/user.wxml</text>
+<wxs module="filter" src="../../utils/utils.wxs"></wxs>
+<view class="user" wx:if="{{userInfo}}">
+  <view class="user-avatar" style="background-image:url({{userInfo.avatarUrl}});"></view>
+  <view class="user-info">
+    <text>{{userInfo.nickName}}</text>
+    <text>注册于{{filter.time(userInfo.create_time)}}</text>
+  </view>
+</view>
+<view class="count">
+  收入
+  <view style="color:#67C23A">{{count.income_num}}</view>
+  笔共
+  <view style="color:#67C23A">{{count.income}}</view>
+  元
+</view>
+<view class="count">
+  支出
+  <view style="color:#F56C6C">{{count.expend_num}}</view>
+  笔共
+  <view style="color:#F56C6C">{{count.expend}}</view>
+  元
+</view>
+<view class="count">
+  {{(count.income-count.expend)>0?'真棒，都攒了':'败家玩意儿，欠了'}}
+  <view style="color:{{(count.income-count.expend)>0?'#67C23A':'#F56C6C'}}">
+    {{(count.income-count.expend)>0?(count.income-count.expend):(count.income-count.expend)*-1}}
+  </view>
+  {{(count.income-count.expend)>0?'块了，下个首富就是你了':'块，下个月准备吃土吗？'}}
+</view>
+<view class="list">
+  <!-- <view class="list-item" bindtap="nav_to_diss" hover-class="hover-class">
+    <i class="iconfont  icon-mess" style="color:red;"></i>
+    <text>与我有关的diss</text>
+    <text class="round" wx:if="{{unRead}}">{{unRead}}</text>
+    <i class="iconfont  icon-icon_next_arrow"></i>
+  </view> -->
+  <button class="list-item" open-type="contact" hover-class="hover-class">
+    <i class="iconfont icon-zixun" style="color:red;"></i>
+    <text>意见/建议</text>
+    <i class="iconfont  icon-icon_next_arrow"></i>
+  </button>
+</view>
