--- a/miniprogram/pages/user/user.wxss
+++ b/miniprogram/pages/user/user.wxss
@@ -1,1 +1,63 @@
-/* pages/user/user.wxss */
+.user {
+  display: flex;
+  padding: 20rpx;
+  background: #3096ff;
+  color: #ffffff;
+  padding-top: 0;
+}
+.user .user-avatar {
+  width: 140rpx;
+  height: 140rpx;
+  border-radius: 100%;
+  background-size: cover;
+  margin-right: 40rpx;
+}
+.user .user-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.count {
+  padding: 0 20rpx;
+  background: #3096ff;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  padding-bottom: 10rpx;
+}
+.count > view {
+  font-size: 50rpx;
+  padding: 0 10rpx;
+}
+.list .list-item {
+  display: flex;
+  align-items: center;
+  height: 100rpx;
+  padding: 0 20rpx;
+  background: #ffffff;
+  margin-bottom: 10rpx;
+}
+.list .list-item i:nth-child(1) {
+  margin-right: 20rpx;
+  font-size: 43rpx;
+}
+.list .list-item text:nth-child(2) {
+  flex: 1;
+  text-align: left;
+  font-size: 30rpx;
+}
+.list .list-item .round {
+  color: red;
+  padding-right: 20rpx;
+}
+.list > button {
+  display: flex;
+  align-items: center;
+  background: #ffffff;
+  border-radius: 0;
+  border: 0;
+}
+.list > button::after {
+  border: none;
+  border-radius: 0;
+}
