--- a/miniprogram/pages/add_note/add_note.less
+++ b/miniprogram/pages/add_note/add_note.less
@@ -13,7 +13,7 @@
     align-items: center;
   }
   .activity_type{
-    color: #3096ff;
+    color: #52495b;
   }
 }
 .tags{
@@ -42,7 +42,7 @@
       margin-bottom: 10rpx;
     };
     .activity_tag{
-      background: #3096ff!important;
+      background: #52495b!important;
       color: #ffffff!important;
     }
   }
@@ -70,7 +70,7 @@
     align-items: center;
     font-size: 50rpx;
     border-radius: 100%;
-    background: #3096ff!important;
+    background: #52495b!important;
     color: #ffffff!important;
   }
 }
@@ -87,7 +87,7 @@
 
 .submit{
   width: 710rpx;
-  background: #3096ff;
+  background: #52495b;
   color: #ffffff;
   margin: 0 auto;
   padding: 20rpx 0;
