--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -2,10 +2,14 @@
 <view class="note_one iconfont  icon-jizhang" bindtap="nav_add_note"></view>
 <view class="pick_time">
   <picker mode="date" value="{{year}}-{{month}}-01" bindchange="switch_handel">
-    <view class="picker">{{year}}年{{month}}月流水信息</view>
+    <view class="picker iconfont icon-gou"> {{month}}月/{{year}}年</view>
   </picker>
 </view>
 <view class="count">
+  <view>
+    <view>结余</view>
+    <view>¥ {{num_in-num_out}}</view>
+  </view>
   <view>
     <view>收入</view>
     <view>¥ {{num_in}}</view>
@@ -14,31 +18,19 @@
     <view>支出</view>
     <view>¥ {{num_out}}</view>
   </view>
-  <view>
-    <view>月结余</view>
-    <view>¥ {{num_in-num_out}}</view>
-  </view>
 </view>
-<view>
-  <view 
-  wx:for="{{list}}" 
-  wx:key="{{item._id}}" 
-  class="item" 
-  hover-class="hover-class"
-  data-id="{{item._id}}" 
-  bindtap="nav_note_handel" 
-  bindlongtap="del_note_handel" 
-  bindtouchstart="handleTouchStart" 
-  bindtouchend="handleTouchEnd">
+<view style="margin-top:20rpx;" wx:if="{{list.length}}">
+  <view wx:for="{{list}}" wx:key="{{item._id}}" class="item" hover-class="hover-class" data-id="{{item._id}}" bindtap="nav_note_handel" bindlongtap="del_note_handel" bindtouchstart="handleTouchStart" bindtouchend="handleTouchEnd">
     <view class="icon iconfont {{item.tag.icon}}"></view>
     <view class="info">
       <view>
         <view>{{item.tag.name}}</view>
-        <view wx:if="{{item.type==='income'}}">+{{item.income}}</view>
-        <view wx:if="{{item.type==='expend'}}">-{{item.expend}}</view>
+        <view wx:if="{{item.type==='income'}}" style="color:#12d58b">+{{item.income}}</view>
+        <view wx:if="{{item.type==='expend'}}" style="color:red">-{{item.expend}}</view>
       </view>
       <view>{{item.remark}}</view>
       <view style="font-size:25rpx;">{{filter.allTime(item.create_time)}}</view>
     </view>
   </view>
 </view>
+<view wx:if="{{!list.length}}" class="logo_loading iconfont icon-gou"></view>
