--- a/miniprogram/pages/user/user.less
+++ b/miniprogram/pages/user/user.less
@@ -1,7 +1,7 @@
 .user{
   display: flex;
   padding: 20rpx;
-  background: #3096ff;
+  background: #52495b;
   color: #ffffff;
   padding-top: 0;
   .user-avatar{
@@ -20,7 +20,7 @@
 
 .count{
   padding:0 20rpx;
-  background: #3096ff;
+  background: #52495b;
   display: flex;
   align-items: center;
   color: #ffffff;
