--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -10,3 +10,19 @@ page{
   opacity: 0.8;
   background: rgba(0,0,0,.3)!important;
 }   
+
+
+
+
+.logo_loading{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%); 
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 300rpx;
+  color: #52495b;
+}
