--- a/miniprogram/pages/author/author.wxml
+++ b/miniprogram/pages/author/author.wxml
@@ -1,5 +1,5 @@
 <view class="onc">
-  <button style="background:#3096ff" type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo">
+  <button style="background:#52495b" type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="onGotUserInfo">
     授权并登录
   </button>
 </view>
