--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,12 +1,12 @@
 .note_one {
   position: fixed;
-  right: 100rpx;
-  bottom: 100rpx;
-  color: #3096ff;
+  right: 60rpx;
+  bottom: 60rpx;
+  color: #52495b;
   font-size: 80rpx;
 }
 .pick_time {
-  background: #3096ff;
+  background: #52495b;
   height: 80rpx;
   display: flex;
   justify-content: center;
@@ -16,7 +16,7 @@
 .count {
   padding: 20rpx;
   padding-top: 0;
-  background: #3096ff;
+  background: #52495b;
   color: #ffffff;
   display: flex;
 }
@@ -47,7 +47,7 @@
   height: 80rpx;
   border-radius: 100%;
   background: #f6f6f6;
-  color: #3096ff;
+  color: #52495b;
   margin-right: 20rpx;
   display: flex;
   justify-content: center;
