--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -2,10 +2,11 @@
 
 .note_one{
   position: fixed;
-  right: 60rpx;
-  bottom: 60rpx;
+  right: 100rpx;
+  bottom: 100rpx;
   color: #52495b;
   font-size: 80rpx;
+  background: #f6f6f6;
 }
 
 
