--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -8,7 +8,7 @@ page{
 
 .hover-class {
   opacity: 0.8;
-  background: rgba(0,0,0,.3)!important;
+  background: rgba(0,0,0,.8)!important;
 }   
 
 
@@ -25,4 +25,25 @@ page{
   transform: translate(-50%, -50%);
   font-size: 300rpx;
   color: #52495b;
+}
+
+
+
+.button{
+  width: 730rpx;
+  background: #52495b;
+  height: 100rpx;
+  color: #f6f6f6;
+  text-align: center;
+  line-height: 100rpx;
+  margin: 0 auto;
+  border-radius: 10rpx;
+}
+
+
+.nothing{
+  margin: 0 auto;
+  padding: 40rpx;
+  text-align: center;
+  color: #666666;
 }
