--- a/miniprogram/pages/add_note/add_note.less
+++ b/miniprogram/pages/add_note/add_note.less
@@ -1,9 +1,10 @@
 .tab{
-  background: #ffffff;
+  background: #52495b;
   display: flex;
   justify-content: space-around;
   align-items: center;
   margin-bottom: 10rpx;
+  color: #f6f6f6;
   view{
     box-sizing: border-box;
     flex: 1;
@@ -13,7 +14,7 @@
     align-items: center;
   }
   .activity_type{
-    color: #52495b;
+    color: #12d58b;
   }
 }
 .tags{
