--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,36 +1,22 @@
 <wxs module="filter" src="../../utils/utils.wxs"></wxs>
 <view class="note_one iconfont  icon-jizhang" bindtap="nav_add_note"></view>
-<view class="pick_time">
-  <picker mode="date" value="{{year}}-{{month}}-01" bindchange="switch_handel">
-    <view class="picker iconfont icon-gou"> {{month}}月/{{year}}年</view>
-  </picker>
-</view>
-<view class="count">
-  <view>
-    <view>结余</view>
-    <view>¥ {{num_in-num_out}}</view>
-  </view>
-  <view>
-    <view>收入</view>
-    <view>¥ {{num_in}}</view>
-  </view>
-  <view>
-    <view>支出</view>
-    <view>¥ {{num_out}}</view>
-  </view>
-</view>
-<view style="margin-top:20rpx;" wx:if="{{list.length}}">
+<view wx:if="{{!list.length}}" class="logo_loading iconfont icon-gou"></view>
+<view style="margin-bottom:20rpx;">
   <view wx:for="{{list}}" wx:key="{{item._id}}" class="item" hover-class="hover-class" data-id="{{item._id}}" bindtap="nav_note_handel" bindlongtap="del_note_handel" bindtouchstart="handleTouchStart" bindtouchend="handleTouchEnd">
     <view class="icon iconfont {{item.tag.icon}}"></view>
     <view class="info">
       <view>
         <view>{{item.tag.name}}</view>
-        <view wx:if="{{item.type==='income'}}" style="color:#12d58b">+{{item.income}}</view>
-        <view wx:if="{{item.type==='expend'}}" style="color:red">-{{item.expend}}</view>
+        <view wx:if="{{item.type==='income'}}" style="color:#12d58b">
+          +{{filter.money(item.income)}}
+        </view>
+        <view wx:if="{{item.type==='expend'}}" style="color:red">
+          -{{filter.money(item.expend)}}
+        </view>
       </view>
       <view>{{item.remark}}</view>
       <view style="font-size:25rpx;">{{filter.allTime(item.create_time)}}</view>
     </view>
   </view>
+  <view class="nothing" wx:if="{{nothing}}">没有东西了...</view>
 </view>
-<view wx:if="{{!list.length}}" class="logo_loading iconfont icon-gou"></view>
