--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,9 +1,10 @@
 .note_one {
   position: fixed;
-  right: 60rpx;
-  bottom: 60rpx;
+  right: 100rpx;
+  bottom: 100rpx;
   color: #52495b;
   font-size: 80rpx;
+  background: #f6f6f6;
 }
 .pick_time {
   background: #52495b;
