--- a/miniprogram/pages/lists_add/lists_add.wxml
+++ b/miniprogram/pages/lists_add/lists_add.wxml
@@ -1,10 +1,10 @@
 <view class="item">
-  <input bindinput="title_text" placeholder="主题" type="text"></input>
+  <input bindinput="handel_title" placeholder="装修清单/婚宴清单/装修清单/旅行清单..." type="text" maxlength="15"></input>
 </view>
 <view class="item">
-  <input bindinput="desc_text" value="一个有趣的账本～" placeholder="描述" type="text"></input>
+  <input bindinput="handel_des" placeholder="一张有趣的清单～" type="text" maxlength="100"></input>
 </view>
-<view class="banner_box">
+<!-- <view class="banner_box">
   <view class="title">选择背景图</view>
   <view class="banners">
     <view wx:for="{{covers}}" wx:key="{{item}}">
@@ -12,5 +12,6 @@
       <view bindtap="check_cover_handel" data-index="{{index}}" class="iconfont {{current_cover===index?'icon-xuanzhong':'icon-xuanzhongyuandian'}}"></view>
     </view>
   </view>
-</view>
-<view hover-class="hover-class" bindtap="submit_handel" class="submit">创建我的专题账本</view>
+</view> -->
+<view hover-class="hover-class" bindtap="handel_note_book" class="submit">创建这个清单</view>
+<view class="tips">该清单所记录的账目不会计入首页流水账目</view>
