--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,3 +1,10 @@
+/*
+#7b78d1 紫色
+#25c587 绿色
+#deb47a 金黄色
+#bfc2c7 灰色
+#52495b 主题色
+*/
 @import "./style/icon.wxss";
 page{
   background: #f6f6f6;
@@ -39,7 +46,15 @@ page{
   margin: 0 auto;
   border-radius: 10rpx;
 }
-
+.lue {
+  overflow: hidden;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  white-space: normal !important;
+  word-wrap: break-word;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
 
 .nothing{
   margin: 0 auto;
