--- a/miniprogram/pages/list_add/list_add.wxml
+++ b/miniprogram/pages/list_add/list_add.wxml
@@ -1,2 +1,7 @@
-<!--pages/list_add/list_add.wxml-->
-<text>pages/list_add/list_add.wxml</text>
+<view class="item">
+  <input focus="true" placeholder="金额" type="number" bindinput="handel_num"></input>
+</view>
+<view class="item">
+  <textarea placeholder="金额描述～" bindinput="handel_des"></textarea>
+</view>
+<view hover-class="hover-class" bindtap="handel_add" class="submit">记一笔</view>
