--- a/miniprogram/utils/utils.wxs
+++ b/miniprogram/utils/utils.wxs
@@ -92,7 +92,7 @@ function richText(text) {
 function money(str) {
   var newStr = "";
   var count = 0;
-
+  str ? str : str = 0;
   if (str.indexOf(".") == -1) {
     for (var i = str.length - 1; i >= 0; i--) {
       if (count % 3 == 0 && count != 0) {
