--- a/miniprogram/pages/list/list.wxss
+++ b/miniprogram/pages/list/list.wxss
@@ -11,13 +11,50 @@
   padding: 20rpx;
   background: #52495b;
   color: #ffffff;
+  font-size: 24rpx;
+  font-weight: 400;
+}
+.head > view {
+  margin-bottom: 10rpx;
 }
 .head > view:nth-child(1) {
   font-size: 34rpx;
   font-weight: 700;
-  margin-bottom: 20rpx;
 }
-.head > view:nth-child(2) {
-  font-size: 24rpx;
-  font-weight: 400;
+.head > .touch {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.head > .touch > .subbtn {
+  padding: 10rpx 20rpx;
+  background: #25c587;
+  color: #ffffff;
+  border-radius: 10rpx;
+}
+.item {
+  padding: 20rpx;
+  background: #ffffff;
+  margin-bottom: 10rpx;
+}
+.item > view:nth-child(1) {
+  display: flex;
+  margin-bottom: 10rpx;
+}
+.item > view:nth-child(1) > view:nth-child(1) {
+  flex: 1;
+}
+.item > view:nth-child(1) > view:nth-child(2) {
+  width: 200rpx;
+  text-align: right;
+  color: #25c587;
+}
+.item > view:nth-child(2) {
+  font-size: 25rpx;
+  color: #bfc2c7;
+  margin-bottom: 10rpx;
+}
+.item > view:nth-child(3) {
+  font-size: 25rpx;
+  color: #bfc2c7;
 }
