--- a/miniprogram/pages/lists/lists.less
+++ b/miniprogram/pages/lists/lists.less
@@ -16,5 +16,15 @@
   &>view:nth-child(2){
     font-size: 25rpx;
     color: #bfc2c7;
+    margin-bottom: 5rpx;
+  }
+  &>view:nth-child(3){
+    font-size: 25rpx;
+    color: #bfc2c7;
+    display: flex;
+    justify-content: space-between;
+    &>view:nth-child(2){
+      color: #25c587;
+    }
   }
 }
