--- a/miniprogram/pages/list_add/list_add.wxml
+++ b/miniprogram/pages/list_add/list_add.wxml
@@ -1,10 +1,10 @@
 <view class="item">
-  <input focus="true" placeholder="金额" type="number" bindinput="handel_num"></input>
+  <input focus="true" placeholder="金额" type="digit" bindinput="handel_num"></input>
 </view>
 <view class="item">
   <input placeholder="用途（必填）" maxlength="15" type="text" bindinput="handel_title"></input>
 </view>
 <view class="item">
-  <textarea placeholder="详情描述～" bindinput="handel_des"></textarea>
+  <input placeholder="描述～"  type="text" bindinput="handel_des"></input>
 </view>
 <view hover-class="hover-class" bindtap="handel_add" class="submit">记一笔</view>
