--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -18,5 +18,5 @@
       <view style="font-size:25rpx;">{{filter.allTime(item.create_time)}}</view>
     </view>
   </view>
-  <view class="nothing" wx:if="{{nothing}}">没有东西了...</view>
+    <view class="nothing">{{nothing?'没有东西了...':''}}</view>
 </view>
