--- a/miniprogram/pages/list/list.wxml
+++ b/miniprogram/pages/list/list.wxml
@@ -8,11 +8,12 @@
       <text style="color:#25c587">{{info.total_num?info.total_num:0}}</text>
       元
     </view>
-    <view class="subbtn" bindtap="nav_list_add" hover-class="hover-class">记一笔</view>
+    <view wx:if="{{admin}}" class="subbtn" bindtap="nav_list_add" hover-class="hover-class">
+      记一笔
+    </view>
   </view>
-  <view wx:if="{{info.create_time}}">{{filter.allTime(info.create_time)}}</view>
 </view>
-<view wx:for="{{list}}" wx:key="{{item._id}}" class="item" hover-class="hover-class" data-id="{{item._id}}" bindlongtap="del_note_handel" bindtouchstart="handleTouchStart" bindtouchend="handleTouchEnd">
+<view wx:for="{{list}}" wx:key="{{item._id}}" class="item" data-id="{{item._id}}" bindlongtap="del_note_handel" bindtouchstart="handleTouchStart" bindtouchend="handleTouchEnd">
   <view>
     <view>{{item.title}}</view>
     <view>{{filter.money(item.num)}} 元</view>
@@ -20,4 +21,4 @@
   <view>{{item.des}}</view>
   <view>{{filter.allTime(item.create_time)}}</view>
 </view>
-<view class="nothing" wx:if="{{nothing}}">没有东西了...</view>
+<view class="nothing">{{nothing?'没有东西了...':''}}</view>
