--- a/miniprogram/utils/utils.wxs
+++ b/miniprogram/utils/utils.wxs
@@ -90,33 +90,34 @@ function richText(text) {
   return text.replace('/\r\n/g', '<br/>').replace('/\n/g', '<br/>').replace('/\s/g', ' ')
 }
 function money(str) {
-  var newStr = "";
-  var count = 0;
-  str ? str : str = 0;
-  if (str.indexOf(".") == -1) {
-    for (var i = str.length - 1; i >= 0; i--) {
-      if (count % 3 == 0 && count != 0) {
-        newStr = str.charAt(i) + "," + newStr;
-      } else {
-        newStr = str.charAt(i) + newStr;
-      }
-      count++;
-    }
-    str = newStr + ".00"; //自动补小数点后两位
-    return str;
-  }
-  else {
-    for (var i = str.indexOf(".") - 1; i >= 0; i--) {
-      if (count % 3 == 0 && count != 0) {
-        newStr = str.charAt(i) + "," + newStr; //碰到3的倍数则加上“,”号
-      } else {
-        newStr = str.charAt(i) + newStr; //逐个字符相接起来
-      }
-      count++;
-    }
-    str = newStr + (str + "00").substr((str + "00").indexOf("."), 3);
-    return str;
-  }
+  // var newStr = "";
+  // var count = 0;
+  // str ? str : str = 0;
+  // if (str.indexOf(".") == -1) {
+  //   for (var i = str.length - 1; i >= 0; i--) {
+  //     if (count % 3 == 0 && count != 0) {
+  //       newStr = str.charAt(i) + "," + newStr;
+  //     } else {
+  //       newStr = str.charAt(i) + newStr;
+  //     }
+  //     count++;
+  //   }
+  //   str = newStr + ".00"; //自动补小数点后两位
+  //   return str;
+  // }
+  // else {
+  //   for (var i = str.indexOf(".") - 1; i >= 0; i--) {
+  //     if (count % 3 == 0 && count != 0) {
+  //       newStr = str.charAt(i) + "," + newStr; //碰到3的倍数则加上“,”号
+  //     } else {
+  //       newStr = str.charAt(i) + newStr; //逐个字符相接起来
+  //     }
+  //     count++;
+  //   }
+  //   str = newStr + (str + "00").substr((str + "00").indexOf("."), 3);
+  //   return str;
+  // }
+  return str;
 };
 
 
