--- a/miniprogram/pages/lists/lists.wxml
+++ b/miniprogram/pages/lists/lists.wxml
@@ -1,7 +1,7 @@
 <!-- pages/note_books/note_books.wxml -->
 <wxs module="filter" src="../../utils/utils.wxs"></wxs>
 <view class="nav_node_book_add iconfont icon-aadd" bindtap="nav_add_node_book"></view>
-<view></view>
+<view wx:if="{{!list.length}}" class="logo_loading iconfont icon-gou"></view>
 <view>
   <navigator url="{{'/pages/list/list?id='+item._id}}" wx:for="{{list}}" wx:key="{{item._id}}" class="item">
     <view>{{item.title}}</view>
