--- a/miniprogram/pages/user/user.less
+++ b/miniprogram/pages/user/user.less
@@ -10,6 +10,7 @@
     border-radius: 100%;
     background-size: cover;
     margin-right: 40rpx;
+    background-color: #ffffff;
   }
   .user-info{
     display: flex;
