--- a/miniprogram/pages/user/user.less
+++ b/miniprogram/pages/user/user.less
@@ -20,15 +20,16 @@
 }
 
 .count{
-  padding:0 20rpx;
-  background: #52495b;
   display: flex;
-  align-items: center;
-  color: #ffffff;
-  padding-bottom: 10rpx;
-  &>view{
-    font-size: 50rpx;
-    padding: 0 10rpx;
+  justify-content: space-between;
+  background: #52495b;
+  padding: 20rpx;
+  &>view:nth-child(1){
+    color: #ffffff;
+  }
+  &>view:nth-child(2){
+    font-size: 70rpx;
+    font-weight: 800;
   }
 }
 
