--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -8,7 +8,33 @@
   font-size: 80rpx;
   background: #f6f6f6;
   border-radius: 100%;
+  
 }
+
+.header{
+  background: #52495b;
+  color: #f6f6f6;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20rpx 20rpx;
+  &>view:nth-child(1){
+    flex: 1;
+  }
+  &>view:nth-child(2){
+    width: 70rpx;
+    text-align: center;
+    font-size: 60rpx;
+    margin-left: 50rpx;
+  }
+  &>view:nth-child(3){
+    width: 70rpx;
+    text-align: center;
+    font-size: 60rpx;
+    margin-left: 50rpx;
+  }
+}
+
 
 
 .pick_time{
