--- a/miniprogram/pages/lists/lists.less
+++ b/miniprogram/pages/lists/lists.less
@@ -28,3 +28,20 @@
     }
   }
 }
+.header{
+  background: #52495b;
+  color: #f6f6f6;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20rpx 20rpx;
+  &>view:nth-child(1){
+    flex: 1;
+  }
+  &>view:nth-child(2){
+    width: 70rpx;
+    text-align: center;
+    font-size: 60rpx;
+    margin-left: 50rpx;
+  }
+}
