--- a/miniprogram/pages/lists/lists.wxss
+++ b/miniprogram/pages/lists/lists.wxss
@@ -28,3 +28,20 @@
 .item > view:nth-child(3) > view:nth-child(2) {
   color: #25c587;
 }
+.header {
+  background: #52495b;
+  color: #f6f6f6;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20rpx 20rpx;
+}
+.header > view:nth-child(1) {
+  flex: 1;
+}
+.header > view:nth-child(2) {
+  width: 70rpx;
+  text-align: center;
+  font-size: 60rpx;
+  margin-left: 50rpx;
+}
