--- a/miniprogram/pages/list/list.less
+++ b/miniprogram/pages/list/list.less
@@ -35,9 +35,11 @@
 
 
 .item{
-  padding: 20rpx;
+  padding:20rpx;
+  margin: 20rpx;
   background: #ffffff;
-  margin-bottom: 10rpx;
+  border-radius: 20rpx;
+  box-shadow: 3px 4px 12px 0 rgba(0,0,0,.1);
   &>view:nth-child(1){
     display: flex;
     margin-bottom: 10rpx;
