--- a/miniprogram/pages/list/list.wxss
+++ b/miniprogram/pages/list/list.wxss
@@ -34,8 +34,10 @@
 }
 .item {
   padding: 20rpx;
+  margin: 20rpx;
   background: #ffffff;
-  margin-bottom: 10rpx;
+  border-radius: 20rpx;
+  box-shadow: 3px 4px 12px 0 rgba(0, 0, 0, 0.1);
 }
 .item > view:nth-child(1) {
   display: flex;
