--- a/miniprogram/pages/user/user.less
+++ b/miniprogram/pages/user/user.less
@@ -4,9 +4,12 @@
   background: #52495b;
   color: #ffffff;
   padding-top: 0;
+  border-bottom-left-radius: 20rpx;
+  border-bottom-right-radius: 20rpx;
+  margin-bottom: 20rpx;
   .user-avatar{
-    width: 140rpx;
-    height: 140rpx;
+    width: 80rpx;
+    height: 80rpx;
     border-radius: 100%;
     background-size: cover;
     margin-right: 40rpx;
@@ -16,16 +19,18 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: 40rpx;
   }
 }
 
 .count{
   display: flex;
   justify-content: space-between;
-  background: #52495b;
+  background: #ffffff;
+  margin-bottom: 20rpx;
   padding: 20rpx;
   &>view:nth-child(1){
-    color: #ffffff;
+    // color: #ffffff;
   }
   &>view:nth-child(2){
     font-size: 70rpx;
