--- a/miniprogram/pages/user/user.wxss
+++ b/miniprogram/pages/user/user.wxss
@@ -4,10 +4,13 @@
   background: #52495b;
   color: #ffffff;
   padding-top: 0;
+  border-bottom-left-radius: 20rpx;
+  border-bottom-right-radius: 20rpx;
+  margin-bottom: 20rpx;
 }
 .user .user-avatar {
-  width: 140rpx;
-  height: 140rpx;
+  width: 80rpx;
+  height: 80rpx;
   border-radius: 100%;
   background-size: cover;
   margin-right: 40rpx;
@@ -17,15 +20,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-size: 40rpx;
 }
 .count {
   display: flex;
   justify-content: space-between;
-  background: #52495b;
+  background: #ffffff;
+  margin-bottom: 20rpx;
   padding: 20rpx;
-}
-.count > view:nth-child(1) {
-  color: #ffffff;
 }
 .count > view:nth-child(2) {
   font-size: 70rpx;
