--- a/miniprogram/pages/list/list.wxss
+++ b/miniprogram/pages/list/list.wxss
@@ -1,30 +1,27 @@
-.note_one {
-  position: fixed;
-  right: 100rpx;
-  bottom: 100rpx;
-  color: #52495b;
-  font-size: 80rpx;
-  background: #f6f6f6;
-  border-radius: 100%;
-}
 .head {
-  padding: 20rpx;
+  padding: 10rpx 20rpx;
   background: #52495b;
   color: #ffffff;
   font-size: 24rpx;
   font-weight: 400;
 }
 .head > view {
-  margin-bottom: 10rpx;
+  padding: 5rpx 0;
 }
 .head > view:nth-child(1) {
   font-size: 34rpx;
   font-weight: 700;
 }
+.head > .draw > view,
+.head > .draw > navigator {
+  padding: 10rpx;
+  font-weight: 800;
+  font-size: 30rpx;
+}
 .head > .touch {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 .head > .touch > .subbtn {
   padding: 10rpx 20rpx;
@@ -36,7 +33,7 @@
   padding: 20rpx;
   margin: 20rpx;
   background: #ffffff;
-  border-radius: 20rpx;
+  border-radius: 10rpx;
   box-shadow: 3px 4px 12px 0 rgba(0, 0, 0, 0.1);
 }
 .item > view:nth-child(1) {
