--- a/miniprogram/pages/lists/lists.wxml
+++ b/miniprogram/pages/lists/lists.wxml
@@ -10,7 +10,7 @@
     <view>{{item.title}}</view>
     <view class="lue">{{item.des}}</view>
     <view>
-      <view>{{filter.allTime(item.create_time)}}</view>
+      <view><text>{{filter.allTime(item.create_time)}} </text> <text wx:if="{{item.click}}">  阅 {{item.click}}</text></view>
       <view>{{item.count}} 条流水</view>
     </view>
   </navigator>
