--- a/miniprogram/pages/lists/lists.less
+++ b/miniprogram/pages/lists/lists.less
@@ -25,6 +25,11 @@
     color: #bfc2c7;
     display: flex;
     justify-content: space-between;
+    &>view:nth-child(1){
+      &>text{
+        margin-right: 20rpx;
+      }
+    }
     &>view:nth-child(2){
       color: #25c587;
     }
