--- a/miniprogram/pages/lists_add/lists_add.less
+++ b/miniprogram/pages/lists_add/lists_add.less
@@ -1,14 +1,14 @@
 .item{
+  padding: 20rpx;
   background: #ffffff;
-  padding: 0 20rpx;
-  height: 100rpx;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10rpx;
-  &>input{
-    flex: 1;
-  }
+  margin-bottom: 20rpx;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // margin-bottom: 10rpx;
+  // &>input,&>textarea{
+  //   flex: 1;
+  // }
 }
 
 
