--- a/miniprogram/pages/list/list.wxml
+++ b/miniprogram/pages/list/list.wxml
@@ -1,10 +1,14 @@
 <wxs module="filter" src="../../utils/utils.wxs"></wxs>
 <view class="head">
-  <view>{{info.title}} {{info.click}}阅</view>
+  <view class="info">
+    <image src="{{info.author.avatarUrl}}"></image>
+    <text>{{info.author.nickName}}</text>
+    <text wx:if="{{info.click}}">{{info.click}}</text>
+    <text style="flex:1"></text>
+    <text>{{filter.allTime(info.create_time)}}</text>
+  </view>
+  <view>{{info.title}}</view>
   <view>{{info.des}}</view>
-  <!-- <view class="draw">
-    <navigator url="{{'/pages/share/share?id='+lists_id}}" class="iconfont  icon-qr-code"></navigator>
-  </view> -->
   <view class="touch">
     <view>
       流水共计
@@ -25,5 +29,4 @@
   <view>{{filter.allTime(item.create_time)}}</view>
 </view>
 <view class="nothing">{{nothing?'没有东西了...':''}}</view>
-
 <!-- <image src="{{qrcode}}" /> -->
