--- a/miniprogram/pages/lists/lists.wxss
+++ b/miniprogram/pages/lists/lists.wxss
@@ -27,6 +27,9 @@
   display: flex;
   justify-content: space-between;
 }
+.item > view:nth-child(3) > view:nth-child(1) > text {
+  margin-right: 20rpx;
+}
 .item > view:nth-child(3) > view:nth-child(2) {
   color: #25c587;
 }
