--- a/miniprogram/pages/lists_add/lists_add.wxss
+++ b/miniprogram/pages/lists_add/lists_add.wxss
@@ -1,14 +1,7 @@
 .item {
+  padding: 20rpx;
   background: #ffffff;
-  padding: 0 20rpx;
-  height: 100rpx;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10rpx;
-}
-.item > input {
-  flex: 1;
+  margin-bottom: 20rpx;
 }
 .banner_box {
   background: #ffffff;
