--- a/miniprogram/pages/user/user.less
+++ b/miniprogram/pages/user/user.less
@@ -1,12 +1,9 @@
 .user{
   display: flex;
-  padding: 20rpx;
+  padding: 120rpx 30rpx;
   background: #52495b;
   color: #ffffff;
   padding-top: 0;
-  border-bottom-left-radius: 30rpx;
-  border-bottom-right-radius: 30rpx;
-  margin-bottom: 20rpx;
   .user-avatar{
     width: 80rpx;
     height: 80rpx;
@@ -24,18 +21,18 @@
 }
 
 .count{
-  display: flex;
-  justify-content: space-between;
   background: #ffffff;
-  margin-bottom: 20rpx;
-  padding: 20rpx;
-  &>view:nth-child(1){
-    // color: #ffffff;
+  padding: 30rpx 20rpx;
+  margin: -90rpx 20rpx 20rpx;
+  border-radius: 30rpx;
+  box-shadow: 3px 4px 12px 0 rgba(0,0,0,.1);
+  &>view{
+    // border-left: 10rpx solid #deb47a;
+    text-indent: 15rpx;
+    margin-bottom: 10rpx;
+    color: #52495b;
   }
-  &>view:nth-child(2){
-    font-size: 70rpx;
-    font-weight: 800;
-  }
+  
 }
 
 .list{
