--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -12,21 +12,13 @@
   </view>
 </view>
 <view class="count">
-  <view>
-    <view>收入 {{count.income_num}} 笔共 {{count.income}} 元</view>
-    <view>支出 {{count.expend_num}} 笔共 {{count.expend}} 元</view>
-  </view>
+  <view>收入 {{count.income_num}} 笔,共 {{count.income}} 元</view>
+  <view>支出 {{count.expend_num}} 笔,共 {{count.expend}} 元</view>
   <view style="color:{{(count.income-count.expend)>0?'#12d58b':'red'}}">
     {{count.income-count.expend}}
   </view>
 </view>
 <view class="list">
-  <!-- <view class="list-item" bindtap="nav_to_diss" hover-class="hover-class">
-    <i class="iconfont  icon-mess" style="color:red;"></i>
-    <text>与我有关的diss</text>
-    <text class="round" wx:if="{{unRead}}">{{unRead}}</text>
-    <i class="iconfont  icon-icon_next_arrow"></i>
-  </view> -->
   <button class="list-item" open-type="contact" hover-class="hover-class">
     <i class="iconfont icon-zixun" style="color:red;"></i>
     <text>意见/建议</text>
