--- a/miniprogram/pages/list/list.less
+++ b/miniprogram/pages/list/list.less
@@ -44,10 +44,10 @@
 
 .item{
   padding:20rpx;
-  margin: 20rpx;
+  margin: 5rpx 0;
   background: #ffffff;
-  border-radius: 10rpx;
-  box-shadow: 3px 4px 12px 0 rgba(0,0,0,.1);
+  // border-radius: 10rpx;
+  // box-shadow: 3px 4px 12px 0 rgba(0,0,0,.1);
   &>view:nth-child(1){
     display: flex;
     margin-bottom: 10rpx;
