--- a/miniprogram/pages/user/user.less
+++ b/miniprogram/pages/user/user.less
@@ -24,7 +24,7 @@
   background: #ffffff;
   padding: 30rpx 20rpx;
   margin: -90rpx 20rpx 20rpx;
-  border-radius: 30rpx;
+  // border-radius: 30rpx;
   box-shadow: 3px 4px 12px 0 rgba(0,0,0,.1);
   &>view{
     // border-left: 10rpx solid #deb47a;
