--- a/miniprogram/pages/list/list.wxss
+++ b/miniprogram/pages/list/list.wxss
@@ -43,10 +43,8 @@
 }
 .item {
   padding: 20rpx;
-  margin: 20rpx;
+  margin: 5rpx 0;
   background: #ffffff;
-  border-radius: 10rpx;
-  box-shadow: 3px 4px 12px 0 rgba(0, 0, 0, 0.1);
 }
 .item > view:nth-child(1) {
   display: flex;
