--- a/miniprogram/pages/lists/lists.less
+++ b/miniprogram/pages/lists/lists.less
@@ -7,10 +7,8 @@
 }
 .item{
   padding:20rpx;
-  margin: 20rpx;
+  margin: 5rpx 0;
   background: #ffffff;
-  border-radius: 10rpx;
-  box-shadow: 3px 4px 12px 0 rgba(0,0,0,.1);
   &>view:nth-child(1){
     font-size: 30rpx;
     margin-bottom: 5rpx;
