--- a/miniprogram/pages/user/user.wxss
+++ b/miniprogram/pages/user/user.wxss
@@ -24,11 +24,27 @@
   padding: 30rpx 20rpx;
   margin: -90rpx 20rpx 20rpx;
   box-shadow: 3px 4px 12px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  border-radius: 10rpx;
 }
 .count > view {
-  text-indent: 15rpx;
-  margin-bottom: 10rpx;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.count > view > view:nth-child(1) {
+  color: #999999;
+}
+.count > view > view:nth-child(2) {
   color: #52495b;
+  font-size: 50rpx;
+  padding-top: 20rpx;
+}
+.count > view:nth-child(2) {
+  border-left: 1rpx solid #999999;
+  border-right: 1rpx solid #999999;
 }
 .list .list-item {
   display: flex;
