--- a/miniprogram/pages/list/list.less
+++ b/miniprogram/pages/list/list.less
@@ -28,10 +28,18 @@
       margin-right: 0;
     }
   }
-  &>.touch{
+  
+}
+.touch{
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background: #52495b;
+    padding:10rpx 20rpx;
+    color:#ffffff;
     &>.subbtn{
       padding: 10rpx 20rpx;
       background: #25c587;
@@ -39,8 +47,6 @@
       border-radius: 10rpx;
     }
   }
-}
-
 
 .item{
   padding:20rpx;
