--- a/miniprogram/pages/user/user.wxss
+++ b/miniprogram/pages/user/user.wxss
@@ -1,6 +1,6 @@
 .user {
   display: flex;
-  padding: 120rpx 30rpx;
+  padding: 30rpx;
   background: #52495b;
   color: #ffffff;
   padding-top: 0;
@@ -22,8 +22,7 @@
 .count {
   background: #ffffff;
   padding: 30rpx 20rpx;
-  margin: -90rpx 20rpx 20rpx;
-  box-shadow: 3px 4px 12px 0 rgba(0, 0, 0, 0.1);
+  margin: 20rpx 0;
   display: flex;
   border-radius: 10rpx;
 }
